ref #11 fix entity types
