# controller/organization.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"reportify-backend/entity"
 )
 
 type OrganizationController struct {
@@ -32,29 +33,10 @@ type UpdateOrganizationRequest struct {
 	Value string `json:"value"`
 }
 
-type MvvResponse struct {
-	// ミッション
-	Mission string `json:"mission"`
-	// ビジョン
-	Vision string `json:"vision"`
-	// バリュー
-	Value string `json:"value"`
-}
-
-type OrganizationResponse struct {
-	// 組織ID
-	Id string `json:"id"`
-	// 組織名
-	Name string `json:"name"`
-	// 組織コード
-	Code string      `json:"code"`
-	Mvv  MvvResponse `json:"mvv"`
-}
-
 // OrganizationsResponse - 組織リストレスポンス
 type OrganizationsResponse struct {
 	// 組織リスト
-	Organizations []OrganizationsResponse `json:"organizations"`
+	Organizations []entity.Organization `json:"organizations"`
 }
 
 // GetOrganizations godoc
@@ -63,9 +45,9 @@ type OrganizationsResponse struct {
 // @Tags        Organization
 // @Accept      json
 // @Produce     json
-// @Success     200 {object} OrganizationResponse "OK"
-// @Failure     400 {object} entity.ErrorResponse "BadRequest"
-// @Failure     401 {object} entity.ErrorResponse "Unauthorized"
+// @Success     200 {object} OrganizationsResponse "OK"
+// @Failure     400 {object} entity.ErrorResponse  "BadRequest"
+// @Failure     401 {object} entity.ErrorResponse  "Unauthorized"
 // @Router      /organizations [get]
 func (c *OrganizationController) GetOrganizations(ctx *gin.Context) (interface{}, error) {
 	panic("not implemented")
@@ -76,12 +58,12 @@ func (c *OrganizationController) GetOrganizations(ctx *gin.Context) (interface{}
 // @Tags    Organization
 // @Accept  json
 // @Produce json
-// @Param   organizationCode path     string                    true "組織コード"
-// @Success 200              {object} OrganizationResponse
-// @Failure 400              {object} entity.ErrorResponse "BadRequest"
-// @Failure 401              {object} entity.ErrorResponse "Unauthorized"
-// @Failure 403              {object} entity.ErrorResponse "Forbidden"
-// @Failure 404              {object} entity.ErrorResponse "Not Found"
+// @Param   organizationCode path     string               true "組織コード"
+// @Success 200              {object} entity.Organization  "OK"
+// @Failure 400              {object} entity.ErrorResponse      "BadRequest"
+// @Failure 401              {object} entity.ErrorResponse      "Unauthorized"
+// @Failure 403              {object} entity.ErrorResponse      "Forbidden"
+// @Failure 404              {object} entity.ErrorResponse      "Not Found"
 // @Router  /organizations/{organizationCode} [get]
 func (c *OrganizationController) GetOrganization(ctx *gin.Context) (interface{}, error) {
 	code := ctx.Params.ByName("organizationCode")
@@ -94,15 +76,14 @@ func (c *OrganizationController) GetOrganization(ctx *gin.Context) (interface{},
 // @Tags    Organization
 // @Accept  json
 // @Produce json
-// @Param   organizationCode path     string true "組織コード"
+// @Param   organizationCode path     string                    true "組織コード"
 // @Param   request          body     UpdateOrganizationRequest true "組織更新リクエスト"
-// @Success 200              {object} OrganizationResponse
-// @Failure 400              {object} entity.ErrorResponse
-// @Failure 401              {object} entity.ErrorResponse
-// @Failure 401              {object} entity.ErrorResponse
-// @Failure 403              {object} entity.ErrorResponse
-// @Failure 404              {object} entity.ErrorResponse
-// @Failure 409              {object} entity.ErrorResponse "Conflict"
+// @Success 200              {object} entity.Organization       "OK"
+// @Failure 400              {object} entity.ErrorResponse "BadRequest"
+// @Failure 401              {object} entity.ErrorResponse "Unauthorized"
+// @Failure 403              {object} entity.ErrorResponse "Forbidden"
+// @Failure 404              {object} entity.ErrorResponse "Not Found"
+// @Failure 409              {object} entity.ErrorResponse      "Conflict"
 // @Router  /organizations/{organizationCode} [put]
 func (c *OrganizationController) UpdateOrganization(ctx *gin.Context) (interface{}, error) {
 	code := ctx.Params.ByName("organizationCode")
