# entity/user.go
@@ -1,7 +1,12 @@
 package entity
 
 type User struct {
-	ID       string `json:"id"`
-	FullName string `json:"fullName"`
-	Email    string `json:"email"`
+	// ユーザID
+	ID string `json:"id"`
+	// ユーザ名
+	Name string `json:"name"`
+	// メールアドレス
+	Email string `json:"email"`
+	// 所属する組織リスト
+	Organizations []UserOrganization `json:"organizations"`
 }
